--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
 
     defaultConfig {
-        applicationId "own.projects.lemiroapp"
+        applicationId "com.github.aedge90.nmm"
         minSdkVersion 14
         targetSdkVersion 25
     }
