added version info to build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ android {
         applicationId "com.github.aedge90.nmm"
         minSdkVersion 14
         targetSdkVersion 25
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
