--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         applicationId "com.github.aedge90.nmm"
         minSdkVersion 14
-        targetSdkVersion 25
+        targetSdkVersion 28
         versionCode 9
         versionName "1.7"
     }
@@ -26,6 +26,6 @@ android {
 
 dependencies {
     //JUnit 4 framework
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:support-v4:25.0.0'
+    testImplementation 'junit:junit:4.12'
+    implementation 'com.android.support:support-v4:28.0.0'
 }
