--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,6 @@ android {
         }
     }
 
-    useLibrary 'android.test.mock'
-
     testOptions {
         unitTests.returnDefaultValues = true
     }
@@ -30,4 +28,5 @@ dependencies {
     //JUnit 4 framework
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:support-v4:28.0.0'
+    testImplementation "org.mockito:mockito-core:5.3.1"
 }
