--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,17 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".OptionsActivity"
-            android:screenOrientation="portrait">
+            android:name=".OptionsActivity">
         </activity>
         <activity
-            android:name=".GameModeActivity"
-            android:screenOrientation="portrait">
+            android:name=".GameModeActivity">
         </activity>
     </application>
 
